<resources>
    <string name="app_name">SEALS Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_log_in">Log in or register</string>
    <string name="nav_header_not_logged">You are not logged in</string>
    <string name="log_in_dialog_button_login_google">Google</string>
    <string name="menu_my_tracks">My tracks</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_record">Record</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_log_out">Log out</string>
    <string name="nav_log_in">Log in or register</string>
    <string name="float_button_label">Start record</string>
    <string name="map_description">Map</string>
    <string name="tracks_city">City</string>
    <string name="track_item_time">12:00:00 – 13:30:30</string>
    <string name="start_intent">app.seals.sealsgallery.START</string>
    <string name="stop_intent">app.seals.sealsgallery.STOP</string>
    <string name="track_content_intent">app.seals.sealsgallery.CONTENT</string>
    <string name="logged_in_intent">app.seals.sealsgallery.LOGGED_IN</string>
    <string name="track_intent_name">track</string>

    <string name="service_is_active">SEALS Gallery is active</string>
    <string name="tracker_is_active">GPS Tracker is active!</string>
    <string name="notifications_channel">Channel_01</string>
    <string name="notifications_channel_title">Notification channel</string>

    <string name="tracker_settings">Tracker Settings</string>
    <string name="tracker_location_interval">Location request interval, s</string>
    <string name="tracker_location_interval_name">requestInterval</string>

    <string name="firebase_reference_name">users</string>
    <string name="firebase_reference_points_node_name">trackPoints</string>
    <string name="firebase_reference_end_time_name">endTime</string>
    <string name="firebase_reference_tracks_name">tracks</string>
    <string name="firebase_reference_user_data">userData</string>
    <string name="firebase_reference_user_data_name">name</string>
    <string name="firebase_reference_user_data_last_login">lastLogin</string>
    <string name="firebase_reference_user_data_photo_link">photoLink</string>
    <string name="personal_settings">Personal settings</string>
    <string name="personal_user_name">Visible name</string>
    <string name="personal_user_name_key">visibleName</string>
    <string name="personal_user_country_key">country</string>
    <string name="personal_user_country">Your country</string>
    <string name="personal_user_language_key">lang</string>
    <string name="personal_user_language">Language</string>
    <string name="user_last_online">Last seen today at 12:22</string>
    <string name="personal_user_bio">Your bio</string>
    <string name="menu_my_tracks_feed">My tracks (feed)</string>
    <string name="userpage_subscribers">Subscribers: 0</string>
    <string name="userpage_subscriptions">Subscriptions: 0</string>
    <string name="userpage_total_tracks">Tracks: 0</string>
    <string name="personal_user_avatar">User avatar</string>
</resources>