<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_logged_in"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_tracks_feed"
            android:icon="@drawable/directions_run_40px"
            android:title="@string/menu_my_tracks"
            android:visible="false"/>
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/insights_40px"
            android:title="@string/menu_feed"
            android:visible="false"/>
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/radio_button_checked_40px"
            android:title="@string/menu_record"
            android:visible="false"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/build_circle_48px"
            android:title="@string/menu_settings"
            android:visible="false"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_log_out"
            android:visible="false"/>
    </group>

    <group android:id="@+id/nav_group_logged_out"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/nav_log_in"
            android:visible="true"/>
    </group>
</menu>