<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/userpageNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/userpageAvatar"
                    android:layout_width="119dp"
                    android:layout_height="111dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/no_accounts_48px"
                    android:contentDescription="@string/personal_user_avatar"
                    android:paddingRight="8dp"/>
                <TextView
                    android:id="@+id/userpageUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_user_name"
                    android:textSize="28sp"
                    app:layout_constraintTop_toTopOf="@id/userpageAvatar"
                    app:layout_constraintStart_toEndOf="@id/userpageAvatar"/>
                <TextView
                    android:id="@+id/userpageSubscribers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/userpageUsername"
                    app:layout_constraintStart_toEndOf="@id/userpageAvatar"
                    android:text="@string/userpage_subscribers"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/userpageSubscriptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/userpageSubscribers"
                    app:layout_constraintStart_toEndOf="@id/userpageAvatar"
                    android:text="@string/userpage_subscriptions"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/userpageTotalTracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/userpageSubscriptions"
                    app:layout_constraintStart_toEndOf="@id/userpageAvatar"
                    android:text="@string/userpage_total_tracks"
                    android:textSize="18sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userpageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/feed_item"
                tools:itemCount="3"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>