<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/recycler_bg_selector"
    android:padding="8dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop= "0dp"
    >

    <ImageView
        android:id="@+id/userItemAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/personal_user_name" />

    <TextView
        android:id="@+id/userItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/personal_user_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/userItemAvatar"
        app:layout_constraintTop_toTopOf="@+id/userItemAvatar" />

    <TextView
        android:id="@+id/userItemLastOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/user_last_online"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/userItemAvatar"
        app:layout_constraintEnd_toStartOf="@+id/userItemAvatar"
        app:layout_constraintTop_toBottomOf="@+id/userItemName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracks_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userItemAvatar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_item_time"
        app:layout_constraintBottom_toBottomOf="@+id/userItemAvatar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/userItemMapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userItemAvatar" />
</androidx.constraintlayout.widget.ConstraintLayout>